--- a/bin/main/static/css/main.css
+++ b/bin/main/static/css/main.css
@@ -1,9 +1,29 @@
-body {
+.wrapper {
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     width: 100%;
     height: 100vh;
     text-align: center;
+}
+
+.wrapper .login-title {
+    padding-bottom: 200px;
+    padding-top: 100px;
+}
+
+.wrapper .login-body {
+    margin: -20vh auto 0;
+}
+
+.wrapper .login-bottom {
+    padding-top: 15px;
+}
+
+.span-area {
+    margin-bottom: 10px;
+}
+
+.warning {
+    color: red;
 }
