--- a/bin/main/templates/index.html
+++ b/bin/main/templates/index.html
@@ -1,36 +1,28 @@
-<!DOCTYPE html>
-<head>
-    <title>로그인</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
-</head>
-<body>
-    <div class="wrapper">
-        <div id="login">
-            <div class="login-title">
-                <img th:src="@{/images/logo.png}" />
-            </div>
-            <div class="login-body">
-                <div class="input-area">
-                    <input type="text" placeholder="휴대폰번호" class="input-text" />
-                    <input type="password" placeholder="비밀번호(4자이상)" class="input-text" />
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layouts/default_layout">
+    <th:block layout:fragment="content">
+        <div class="wrapper">
+            <div id="login">
+                <div class="login-title">
+                    <img th:src="@{/images/logo.png}" />
                 </div>
-                <div class="btn-area">
-                    <button class="btn primary md" type="button">Login</button>
+                <div class="login-body">
+                    <div class="input-area">
+                        <input type="text" placeholder="휴대폰번호" class="input-text" />
+                        <input type="password" placeholder="비밀번호(4자이상)" class="input-text" />
+                    </div>
+                    <div class="btn-area">
+                        <button class="btn primary md" type="button">Login</button>
+                    </div>
                 </div>
-            </div>
-            <div class="login-bottom">
-                <div class="span-area">
-                    <a href="/resetPassword">비밀번호 재설정</a>
-                </div>
-                <div class="span-area">
-                    <p class="warning">최초 사용자는 휴대폰번호 입력 후, <br/> Login 버튼 눌러주세요.</p>
+                <div class="login-bottom">
+                    <div class="span-area">
+                        <a href="/resetPassword">비밀번호 재설정</a>
+                    </div>
+                    <div class="span-area">
+                        <p class="warning">최초 사용자는 휴대폰번호 입력 후, <br/> Login 버튼 눌러주세요.</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
-
+    </th:block>
 </html>
