--- a/bin/main/templates/index.html
+++ b/bin/main/templates/index.html
@@ -1,4 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layouts/default_layout">
+    <head>
+        <title>로그인</title>
+    </head>
     <th:block layout:fragment="content">
         <div class="wrapper">
             <div id="login">
@@ -7,8 +10,8 @@
                 </div>
                 <div class="login-body">
                     <div class="input-area">
-                        <input type="text" placeholder="휴대폰번호" class="input-text" />
-                        <input type="password" placeholder="비밀번호(4자이상)" class="input-text" />
+                        <input type="text" name="mbl_tel_no" placeholder="휴대폰번호" class="input-text" />
+                        <input type="password" name="passwd" placeholder="비밀번호(4자이상)" class="input-text" />
                     </div>
                     <div class="btn-area">
                         <button class="btn primary md" type="button">Login</button>
