--- a/bin/main/templates/fragments/header.html
+++ b/bin/main/templates/fragments/header.html
@@ -5,6 +5,11 @@
         <head>
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta charset="utf-8" />
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+            <script src="https://kit.fontawesome.com/461d00b8cd.js" crossorigin="anonymous"></script>
+            <script th:src="@{/js/main.js}"></script>
+            <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+            <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
         </head>
     </div>
 </html>
