--- a/bin/main/static/css/style.css
+++ b/bin/main/static/css/style.css
@@ -147,7 +147,7 @@ button {
 input {
   border-radius:4px;
   margin-bottom: 5px;
-  border: 1px solid black;
+  border: 1px solid #aeaeae;
 }
 
 a {
@@ -258,7 +258,7 @@ body {
   background-color: var(--color-blue);
   color: #fff;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 14px;
   color: var(--color-blue);
   border: 1px solid #fff;
   background-color: #fff;
@@ -289,7 +289,6 @@ body {
   color: #fff;
   border: 1px solid #2C83E9;
   background-color: #2C83E9;
-  width:270px;
 }
 .btn.secondary {
   color: var(--color-default);
@@ -352,8 +351,8 @@ body {
 }
 .input-radio.default .radio_box {
   display: inline-block;
-  *display: inline;
-  *zoom: 1;
+  display: inline;
+  zoom: 1;
   position: relative;
   padding-left: 26px;
   margin-right: 20px;
@@ -494,12 +493,12 @@ body {
 
 /* input-text */
 .input-text {
-  height: 40px;
+  height: 45px;
   vertical-align: top;
   box-sizing: border-box;
   padding: 0 15px;
   font-size: 12px;
-  width: 270px;
+  width: 330px;
 }
 .input-text.xs {
   width: 151px;
