--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,30 @@
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layouts/default_layout">
+<html>
     <head>
         <title>로그인</title>
+        <div th:replace="fragments/header::header"></div>
     </head>
-    <th:block layout:fragment="content">
-        <div class="wrapper">
-            <div id="login">
-                <div class="login-title">
-                    <img th:src="@{/images/logo.png}" />
+    <div class="wrapper">
+        <div id="login">
+            <div class="login-title">
+                <img th:src="@{/images/logo.png}" />
+            </div>
+            <div class="login-body">
+                <div class="input-area">
+                    <input type="text" name="mbl_tel_no" placeholder="휴대폰번호" class="input-text" />
+                    <input type="password" name="passwd" placeholder="비밀번호(4자이상)" class="input-text" />
                 </div>
-                <div class="login-body">
-                    <div class="input-area">
-                        <input type="text" name="mbl_tel_no" placeholder="휴대폰번호" class="input-text" />
-                        <input type="password" name="passwd" placeholder="비밀번호(4자이상)" class="input-text" />
-                    </div>
-                    <div class="btn-area">
-                        <button class="btn primary md" type="button">Login</button>
-                    </div>
+                <div class="btn-area">
+                    <button class="btn primary login_btn" type="button">Login</button>
                 </div>
-                <div class="login-bottom">
-                    <div class="span-area">
-                        <a href="/resetPassword">비밀번호 재설정</a>
-                    </div>
-                    <div class="span-area">
-                        <p class="warning">최초 사용자는 휴대폰번호 입력 후, <br/> Login 버튼 눌러주세요.</p>
-                    </div>
+            </div>
+            <div class="login-bottom">
+                <div class="span-area">
+                    <a href="/resetPassword">비밀번호 재설정</a>
+                </div>
+                <div class="span-area">
+                    <p class="warning">최초 사용자는 휴대폰번호 입력 후, <br/> Login 버튼 눌러주세요.</p>
                 </div>
             </div>
         </div>
-    </th:block>
+    </div>
 </html>
