--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+    <title>결재</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
     <div th:replace="fragments/header::header"></div>
+    <div th:replace="fragments/head::head"></div>
     <div layout:fragment="content"></div>
     <div th:replace="fragments/footer::footer"></div>
 </body>
