--- a/bin/main/templates/fragments/header.html
+++ b/bin/main/templates/fragments/header.html
@@ -7,6 +7,7 @@
             <meta charset="utf-8" />
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
             <script src="https://kit.fontawesome.com/461d00b8cd.js" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
             <script th:src="@{/js/main.js}"></script>
             <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
             <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
