--- a/bin/main/templates/fragments/head.html
+++ b/bin/main/templates/fragments/head.html
@@ -9,7 +9,15 @@
     <div class="tab-nav-wrap">
         <ul class="tab-nav">
             <li>메인</li>
-            <li class="on">결재</li>
+            <li class="on sec-nav">결재</li>
+            <ul class="second-nav">
+                <li>전체</li>
+                <li>임시저장</li>
+                <li>진행중</li>
+                <li>반려</li>
+                <li>반려보관</li>
+                <li>완료</li>
+            </ul>
             <li>급여</li>
             <li>연차</li>
         </ul>
