--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -64,7 +64,7 @@
     border-bottom: 1px solid #EEEEEE;
 }
 
-.tab-nav-wrap .tab-nav li {
+.tab-nav-wrap .tab-nav > li {
     padding: 0px 15px;
     height: 32px;
     line-height: 30px;
@@ -72,9 +72,28 @@
     padding-bottom: 5px;
 }
 
-.tab-nav-wrap .tab-nav li.on {
+.tab-nav-wrap .tab-nav > li.on {
     border-bottom: 2px solid #2C83E9;
     color: #2C83E9;
+}
+
+.second-nav {
+    width: 65px;
+    position: absolute;
+    z-index: 10;
+    left: 25vw;
+    background-color: #FFFFFF;
+    margin-top: 10px;
+    border: 1px solid #EEEEEE;
+    padding: 10px;
+    font-size: 12px;
+    color: black;
+}
+
+.second-nav li {
+    line-height: unset;
+    text-align: justify;
+    padding: 5px 5px;
 }
 
 /* 로그인 */
@@ -160,5 +179,5 @@
 }
 
 .dashboard-body .btn-box .approval-box span:first-child {
-    padding-top: 45px;
+    padding-top: 50px;
 }
