--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -6,7 +6,7 @@
                     <div class="btn-box">
                         <div class="approval-box bg-blue1">
                             <span>전자결재</span>
-                            <span class="count-area">1건</span>
+                            <span class="count-area"></span>
                         </div>
                         <div class="approval-box bg-blue2">
                             <span>결재문서</span>
