--- a/bin/main/templates/dashboard.html
+++ b/bin/main/templates/dashboard.html
@@ -4,31 +4,31 @@
             <div id="dashboard">
                 <div class="dashboard-body">
                     <div class="btn-box">
-                        <div class="approval-box bg-blue1">
+                        <div id="sign" class="approval-box bg-blue1">
                             <span>전자결재</span>
                             <span class="count-area"></span>
                         </div>
-                        <div class="approval-box bg-blue2">
+                        <div id="signDoc" class="approval-box bg-blue2">
                             <span>결재문서</span>
                             <span class="count-area"></span>
                         </div>
                     </div>
                     <div class="btn-box">
-                        <div class="approval-box bg-blue3">
+                        <div id="announcementCheck" class="approval-box bg-blue3">
                             <span>공람확인</span>
                             <span class="count-area"></span>
                         </div>
-                        <div class="approval-box bg-blue4">
+                        <div id="announcementDoc" class="approval-box bg-blue4">
                             <span>공람문서</span>
                             <span class="count-area"></span>
                         </div>
                     </div>
                     <div class="btn-box">
-                        <div class="approval-box bg-blue5">
+                        <div id="personalDoc" class="approval-box bg-blue5">
                             <span>개인서류</span>
                             <span class="count-area"></span>
                         </div>
-                        <div class="approval-box bg-blue6">
+                        <div id="prograssDoc" class="approval-box bg-blue6">
                             <span>진행서류</span>
                             <span class="count-area"></span>
                         </div>
