--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,21 +3,17 @@
 
 <div th:fragment="head">
     <div class="main-header">
+        <span class="company">Company</span>
         <h1>제이에스원</h1>
-        <span class="btn-logout"><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
+        <span class="btn-logout">
+            ID
+            <i class="fa-solid fa-arrow-right-from-bracket"></i>
+        </span>
     </div>
     <div class="tab-nav-wrap">
         <ul class="tab-nav">
             <li>메인</li>
-            <li class="on sec-nav">결재</li>
-            <ul class="second-nav">
-                <li>전체</li>
-                <li>임시저장</li>
-                <li>진행중</li>
-                <li>반려</li>
-                <li>반려보관</li>
-                <li>완료</li>
-            </ul>
+            <li class="on">결재</li>
             <li>급여</li>
             <li>연차</li>
         </ul>
