--- a/bin/main/static/css/style.css
+++ b/bin/main/static/css/style.css
@@ -244,7 +244,7 @@ body {
 .btn {
   display: inline-block;
   padding: 0 34px;
-  height: 42px;
+  height: 45px;
   line-height: 42px;
   border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -297,8 +297,8 @@ body {
 }
 .btn.tertiary {
   color: #fff;
-  border: 1px solid var(-color-gray);
-  background-color: var(--color-gray);
+  border: 1px solid var(--color-gray);
+  background-color: var(--color-background-black);
 }
 .btn.icon {
   padding: 0;
@@ -499,12 +499,17 @@ body {
   padding: 0 15px;
   font-size: 12px;
   width: 330px;
+  border-color: #9999;
+  border-radius: 4px;
 }
 .input-text.xs {
-  width: 165px;
+  width: 115px;
 }
 .input-text.sm {
   width: 165px;
+}
+.input-text.s {
+  width:250px;
 }
 .input-text.lg {
   width: 345px;
