--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -16,8 +16,8 @@
                 </div>
                 <div class="sign-body">
                     <div class="search-box">
-                        <input type="date" name="startDate"  class="input-text xs datepicker" placeholder="YYYY-MM-DD" /> ~ 
-                        <input type="date" name="endDate" class="input-text xs datepicker" placeholder="YYYY-MM-DD" />
+                        <input type="date" name="startDate"  class="input-text sm datepicker" placeholder="YYYY-MM-DD" /> ~ 
+                        <input type="date" name="endDate" class="input-text sm datepicker" placeholder="YYYY-MM-DD" />
                         <input type="text" name="search" class="input-text lg search" placeholder="검색" />
                         <div class="condition-box">
                             <span><i class="fa-regular fa-square-check"></i><span class="text">신규메시지</span></span>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="sign-bottom">
-                    <span><i class="fa-regular fa-circle-up fa-lg"></i></span>
+                    <span><i class="fa-solid fa-arrow-up"></i></span>
                 </div>
             </div>
         </div>
