--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -21,7 +21,7 @@
                         <input type="text" name="search" class="input-text lg search" placeholder="검색" />
                         <div class="condition-box">
                             <span><i class="fa-regular fa-square-check"></i><span class="text">신규메시지</span></span>
-                            <span><i class="fa-solid fa-square-check"></i><span class="text">완료문서제외</span></span>
+                            <span><i class="fa-regular fa-square-check"></i><span class="text">완료문서제외</span></span>
                         </div>
                     </div>
                     <div class="list-box">
