--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -16,7 +16,7 @@
                     <input type="password" name="passwd2" placeholder="비밀번호(4자이상)" class="input-text" />
                 </div>
                 <div class="btn-area">
-                    <button class="btn secondary btn-close" type="button">취소</button>
+                    <button class="btn secondary close-btn" type="button">취소</button>
                     <button class="btn primary" type="button">비밀번호 재설정</button>
                 </div>
             </div>
